--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,40 @@
-
+{
+"short_name": "CSF",
+"name": "Miluji CSF",
+"icons": [
+  {
+    "src": "/android-chrome-192x192.png",
+    "type": "image/png",
+    "sizes": "192x192"
+  }
+  {
+    "src": "/android-chrome-512x512.png",
+    "type": "image/png",
+    "sizes": "512x512"
+  }
+  {
+    "src": "/apple-touch-icon.png",
+    "type": "image/png",
+    "sizes": "180x180"
+  }
+  {
+    "src": "/favicon-16x16.png",
+    "type": "image/png",
+    "sizes": "16x16"
+  }
+  {
+    "src": "/favicon-32x32.png",
+    "type": "image/png",
+    "sizes": "32x32"
+  }
+  {
+    "src": "/mstile-150x150.png",
+    "type": "image/png",
+    "sizes": "150x150"
+  }
+ ],
+"start_url": "/index.html",
+"background_color": "#000000",
+"display": "standalone",
+"theme_color": "#005ac2"
+}
